--- a/webview/src/style.css
+++ b/webview/src/style.css
@@ -1,6 +1,6 @@
 @import "bootstrap";
 
-.navbar{
+.navbar {
     height: 60px;
 }
 
@@ -9,3 +9,6 @@
     background-color: rgb(218, 218, 218);
 }
 
+.responsive-font {
+    font-size: 100%;
+}
